fix: Add height to accomodate for scrollbar

--- a/.storybook/themes/commerce.scss
+++ b/.storybook/themes/commerce.scss
@@ -359,7 +359,7 @@
 					width: 100%,
 					overflow-x: scroll,
 					overflow-y: hidden,
-					height: var(--global-spacing-9),
+					height: var(--global-spacing-11),
 					white-space: nowrap,
 				),
 				carousel-indicator-thumbnail: (
